--- a/frontend/src/Components/Header/header.css
+++ b/frontend/src/Components/Header/header.css
@@ -8,12 +8,13 @@
 .headerWrapper {
     width: 100%;
     max-width: 1024px;
-    margin: 20px 0px 130px 0px;
+    margin: 20px 0px 100px 0px;
 }
 
 .headerList {
     display: flex;
-    gap: 35px;
+    gap: 10px;
+    margin-bottom: 50px;
 }
 
 .headerListItems {
@@ -38,4 +39,12 @@
     display: flex;
     align-items: center;
     gap: 10px;
+}
+
+.headerTitle {
+    font-size: 48px;
+}
+
+.headerDesc {
+    font-size: 24px;
 }
