--- a/frontend/src/Components/Search/search.css
+++ b/frontend/src/Components/Search/search.css
@@ -1,9 +1,9 @@
 .search {
     color: black;
     /* border: 1px solid red; */
-    /* position: absolute;
+    position: absolute;
     width: 100%;
-    bottom: 50%; */
+    bottom: -30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,14 +12,15 @@
 .searchWrapper {
     display: flex;
     /* border: 1px solid green; */
-    width: 75%;
+    width: 100%;
+    max-width: 1024px;
     background-color: #ffb700;
     padding: 5px;
     gap: 5px;
     border-radius: 5px;
 }
 
-.searchItems{
+.searchItems {
     border-radius: 5px;
     display: flex;
     align-items: center;
@@ -29,13 +30,13 @@
     width: 100%;
 }
 
-.searchHotelsInput{
+.searchHotelsInput {
     outline: none;
     border: none;
     width: 100%;
 }
 
-.searchBtn{
+.searchBtn {
     background-color: #006ce4;
     color: white;
     padding: 15px;
@@ -43,4 +44,8 @@
     border: none;
     font-weight: 500;
     font-size: 16px;
+}
+
+.searchWrapper {
+    box-shadow: 0px 0px 10px 0px #191919;
 }
