--- a/frontend/src/Components/Search/search.css
+++ b/frontend/src/Components/Search/search.css
@@ -44,8 +44,23 @@
     border: none;
     font-weight: 500;
     font-size: 16px;
+    cursor: pointer;
 }
 
 .searchWrapper {
     box-shadow: 0px 0px 10px 0px #191919;
+}
+
+.reactDateRange,
+.optionsList {
+    cursor: pointer;
+}
+
+.reactDateRange {
+    position: relative;
+}
+
+.dateRange {
+    position: absolute;
+    top: 50px;
 }
