--- a/frontend/src/pages/Home/home.css
+++ b/frontend/src/pages/Home/home.css
@@ -1,18 +1,31 @@
 .homeContainer {
-    width: 100%;
     /* max-width: 1024px; */
     margin-top: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 30px;
+    padding: 0px 100px;
     /* border: 1px solid red; */
 }
 
 .featuredItemsList {
-    width: 90%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     gap: 15px;
     /* flex-wrap: wrap; */
+}
+
+.homeGuestLove, .featuredDestinations{
+    align-self: flex-start;
+}
+
+.topRatedHomesList{
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    gap: 20px;
+    /* flex-wrap: wrap; */
+    /* overflow-x: scroll; */
 }
