--- a/frontend/src/pages/Login/login.css
+++ b/frontend/src/pages/Login/login.css
@@ -1,21 +1,37 @@
+.login {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.lContainer {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
 .l-input-group {
     position: relative;
 }
 
 .l-input {
+    width: 100%;
     border: solid 1.5px #9e9e9e;
     border-radius: 1rem;
     background: none;
     padding: 1rem;
     font-size: 1rem;
-    color: #f5f5f5;
+    color: black;
     transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .l-user-label {
     position: absolute;
     left: 15px;
-    color: #e8e8e8;
+    color: black;
     pointer-events: none;
     transform: translateY(1rem);
     transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -24,13 +40,13 @@
 .l-input:focus,
 input:valid {
     outline: none;
-    border: 1.5px solid #1a73e8;
+    /* border: 1.5px solid #1a73e8; */
 }
 
 .l-input:focus~label,
 input:valid~label {
-    transform: translateY(-50%) scale(0.8);
-    background-color: #212121;
+    transform: translateY(-80%) scale(0.8);
+    background-color: transparent;
     padding: 0 .2em;
     color: #2196f3;
 }
